--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "delboy1978uk@gmail.com"
         }
     ],
-    "require": [],
+    "require": {
+        "hybridauth/hybridauth": "^3.6"
+    },
     "require-dev": {
         "roave\/security-advisories": "dev-master"
     },
