--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "codeception/codeception": "^4.1",
-        "codeception/module-phpbrowser": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "delboy1978uk/dev-tools": "^v1.1"
     },
     "autoload": {
         "psr-4": {
