--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,6 +6,8 @@ build:
       tests:
         override:
           - php-scrutinizer-run
+  environment:
+    php: 8.4.13
 filter:
   paths:
     - src/*
